# pro_labs

./: .gitignore
lab_0/: .gitignore
lab_0/cool_stl/: main.cpp  shell.stl
lab_0/torus/: CMakeLists.txt  main.cpp
lab_1/1/: CMakeLists.txt  main.cpp
lab_2/1/: CMakeLists.txt  main.cpp  poisson.py
